--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
     <link rel="shortcut icon" href="images/icons/logo.png" type="image/x-icon">
+
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"> -->
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <h3>G3 Architects</h3>
+            <ul>
+                <li> <a href="">Home</a> </li>
+                <li> <a href="">About</a> </li>
+                <li> <a href="">Contact Us</a> </li>
+                <li> <a href="">Login</a> </li>
+            </ul>
+        </nav>
+    </header>
 
     <main></main>
 
