--- a/index.html
+++ b/index.html
@@ -34,7 +34,23 @@
         </div>
     </header>
 
-    <main></main>
+    <main>
+        <!-- features section -->
+        <section class="features-container">
+            <div class="features-img-container">
+                <img src="images/team1.png" alt="team1.png">
+                <img src="images/team2.png" alt="team2.png">
+                <img src="images/team3.png" alt="team3.png">
+                <img src="images/team4.png" alt="team4.png">
+            </div>
+
+            <div class="features-content">
+                <h3 class="features-title"><span class="quick-list">Quick list</span> <span class="of-our">of Our</span> <span class="features">Features</span></h3>
+                <p class="features-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+    </main>
 
     <footer></footer>
 </body>
