--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New Group of Architects </h1>
-                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="text-description-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
             <img src="images/banner.png" alt="banner.png">
@@ -45,8 +45,8 @@
             </div>
 
             <div class="features-content">
-                <h3 class="features-title"><span class="quick-list">Quick list</span> <span class="of-our">of Our</span> <span class="features">Features</span></h3>
-                <p class="features-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h3 class="features-title"><span class="quick-list text-description-color">Quick list</span> <span class="of-our">of Our</span> <span class="features">Features</span></h3>
+                <p class="features-description text-description-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
