--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav>
-            <h3 class="nav-title">G3 Architects</h3>
+            <h3 class="text-title">G3 Architects</h3>
             <ul>
                 <li> <a href="">Home</a> </li>
                 <li> <a href="">About</a> </li>
@@ -49,6 +49,16 @@
                 <p class="features-description text-description-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
+        </section>
+
+        <!-- love enjoy section -->
+        <section class="love-enjoy-container"></section>
+
+        <!-- facts section -->
+        <section class="facts-container">
+            <h3 class="text-title">Some Facts</h3>
+            <p class="text-description-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
         </section>
     </main>
 
