facts card  added

--- a/index.html
+++ b/index.html
@@ -59,6 +59,31 @@
             <h3 class="text-title">Some Facts</h3>
             <p class="text-description-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
 
+            <div class="facts-card">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="ribon.png">
+                    <h2 class="card-stats">54</h2>
+                    <p class="card-title text-description-color">Awards Winnings</p>
+                </div>
+
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="projects.png">
+                    <h2 class="card-stats">1458</h2>
+                    <p class="card-title text-description-color">Project Finished</p>
+                </div>
+
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="customers.png">
+                    <h2 class="card-stats">590</h2>
+                    <p class="card-title text-description-color">Clients Worked</p>
+                </div>
+
+                <div class="card">
+                    <img src="images/icons/email.png" alt="email.png">
+                    <h2 class="card-stats">22578</h2>
+                    <p class="card-title text-description-color">Email Send</p>
+                </div>
+            </div>
         </section>
     </main>
 
