sponsors section added & responsive done

--- a/index.html
+++ b/index.html
@@ -85,6 +85,20 @@
                 </div>
             </div>
         </section>
+
+        <!-- sponsors section -->
+        <section class="sponsors-container">
+            <h3 class="text-title">Our Sponsors</h3>
+            <p class="text-description-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
+            <div class="sponsors-img-container">
+                <img src="images/sponsors/spotify.png" alt="spotify.png">
+                <img src="images/sponsors/amazon.png" alt="amazon.png">
+                <img src="images/sponsors/google.png" alt="google.png">
+                <img src="images/sponsors/telerama.png" alt="telerama.png">
+                <img src="images/sponsors/figma.png" alt="figma.png">
+            </div>
+        </section>
     </main>
 
     <footer></footer>
