--- a/index.html
+++ b/index.html
@@ -52,7 +52,41 @@
         </section>
 
         <!-- love enjoy section -->
-        <section class="love-enjoy-container"></section>
+        <section class="love-enjoy-container">
+            <div class="love-enjoy-content">
+                <h3 class="text-title">Features you will <br> love & enjoy</h3>
+                <p class="text-description-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+                <div class="card">
+                    <h4 class="card-title">Desktop & Mobile Version</h4>
+                    <p class="card-description text-description-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+
+                <div class="card">
+                    <h4 class="card-title">Drag & Drop Builder</h4>
+                    <p class="card-description text-description-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+
+                <div class="card">
+                    <h4 class="card-title">Awesome Modern Design</h4>
+                    <p class="card-description text-description-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+
+                <div class="card">
+                    <h4 class="card-title">Super Easy to Edit</h4>
+                    <p class="card-description text-description-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+
+            <div class="love-enjoy-img">
+                <img src="images/architect.png" alt="architect.png">
+
+                <div class="ten-years-badge">
+                    <h2>10+Year</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
+        </section>
 
         <!-- facts section -->
         <section class="facts-container">
